--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,7 +36,7 @@ jobs:
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
       - name: Build site
         run: |
-          git checkout buildcheck
+          git checkout master
           ./rezyn.py -c rezynsite/config.yml 
           git config user.name "GitHub Actions Bot"
           git config user.email "<>"
@@ -44,4 +44,4 @@ jobs:
           mv _http/rezyn docs
           git add docs
           git commit -m "github actions: build site"
-          git push origin buildcheck
+          git push origin master
